# OpenGlLearning

DeepTest/: CMakeLists.txt
DeepTest/shaders/: colors.fs  colors.vs  colors_view.vs  fragmentShader.fs  vertexShader.vs
DeepTest/src/: DeepTest.cpp  mesh.h  model.h  shader.h
Skybox/: CMakeLists.txt
Skybox/shaders/: frame_buffer.fs
Skybox/src/: SkyBox.cpp  mesh.h  model.h
UseAssimp/: CMakeLists.txt
UseAssimp/shaders/: colors_view.fs
UseAssimp/src/: UseAssimp.cpp
